--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_inicio">inicio</string>
     <string name="title_activity_registro">registro</string>
+    <string name="title_activity_ajustes">ajustes</string>
+    <string name="title_activity_ajustes_cuenta">AjustesCuenta</string>
+    <string name="title_activity_ajustes_notificaciones">ajustes_notificaciones</string>
+    <string name="title_activity_ajustes_ayuda">ajustes_ayuda</string>
 </resources>
