--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_ajustes_cuenta">AjustesCuenta</string>
     <string name="title_activity_ajustes_notificaciones">ajustes_notificaciones</string>
     <string name="title_activity_ajustes_ayuda">ajustes_ayuda</string>
+    <string name="title_activity_bienvenida">bienvenida</string>
 </resources>
